Feedback System Added

--- a/EProject/appsettings.json
+++ b/EProject/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EProjectConnection": "Server= DESKTOP-S0RMRQA\\SQLEXPRESS; Database = EProjectBooksd;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;Encrypt=False"
+    "EProjectConnection": "Server= DESKTOP-S0RMRQA\\SQLEXPRESS; Database = EProject;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;Encrypt=False"
   }
 }
